<resources>
    <string name="app_name">theteller-android</string>
    <string name="accept_card_payments">Accept card payments</string>
    <string name="accept_account_payments">Accept account payments</string>
    <string name="email">Email</string>
    <string name="amount_to_charge_required">Amount to charge (required)</string>
    <string name="api_key">Api key</string>
    <string name="txref_required">txRef (required)</string>
    <string name="narration">Narration</string>
    <string name="currency_code_e_g_ghs">Currency code e.g. GHS</string>
    <string name="country_code_e_g_gh">Country code e.g. GH</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="redirect_url">3d Redirect Url</string>
    <string name="start_payment">START PAYMENT</string>
    <string name="secret_key">Secret Key</string>
</resources>
