<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="gh.com.payswitch.theteller_android.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:checked="true"
                    android:text="@string/accept_card_payments"
                    android:id="@+id/cardPaymentSwitch"
                    />

                <!--<androidx.v7.widget.SwitchCompat-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:text="@string/accept_account_payments"-->
                <!--android:checked="true"-->
                <!--android:id="@+id/accountPaymentSwitch"-->
                <!--/>-->


                <!--<androidx.v7.widget.SwitchCompat-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:text="Accept Mpesa payments"-->
                    <!--android:checked="true"-->
                    <!--android:id="@+id/accountMpesaSwitch"-->
                    <!--/>-->

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="Accept GH Mobile money payments"
                    android:checked="true"
                    android:id="@+id/accountGHMobileMoneySwitch"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="Live"
                    android:checked="false"
                    android:id="@+id/isLiveSwitch"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="14sp"
                    android:id="@+id/emailEt"
                    android:layout_marginBottom="10dp"
                    android:inputType="textEmailAddress"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/amount_to_charge_required"
                    android:id="@+id/amountEt"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/api_key"
                    android:text=""
                    android:id="@+id/apiKeyEt"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/txref_required"
                    android:id="@+id/txRefEt"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="merchant Id"
                    android:id="@+id/merchant_idEt"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="Api Username"
                    android:id="@+id/api_userEt"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/redirect_url"
                    android:id="@+id/d_urlEt"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/narration"
                    android:id="@+id/narrationTV"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/currency_code_e_g_ghs"
                    android:id="@+id/currencyEt"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/first_name"
                    android:id="@+id/fNameEt"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/last_name"
                    android:id="@+id/lnameEt"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:text="@string/start_payment"
                    android:id="@+id/startPaymentBtn"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:background="#372E4C"
                    android:visibility="gone"
                    android:id="@+id/progressContainer"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"/>

                </FrameLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>